# FTP_with_gRPC

./: .gitignore  CMakeLists.txt  build.sh  run.sh  setup.sh
Client/: CMakeLists.txt
Client/include/: FTPClient.hpp
Client/source/: FTPClient.cpp  main.cpp
Protocol/: CMakeLists.txt  protocol.proto
Protocol/include/: FileMetaData.hpp
Protocol/source/: FileMetaData.cpp
Server/: CMakeLists.txt
Server/include/: FTPServiceImpl.hpp  ServerInterceptor.hpp  UploadSession.hpp
Server/source/: FTPServiceImpl.cpp  UploadSession.cpp  main.cpp
proto/: CMakeLists.txt  FTPService.proto  file.proto  ftp_service.proto  hash.proto
proto/include/: FileMetaData.hpp
proto/source/: FileMetaData.cpp
